--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -1,1 +1,17 @@
 {% extends 'watch/base.html' %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <form action="" method="post" novalidate>
+                <!-- {% csrf_token %}
+                {{ form|crispy }} -->
+                <button class="btn btn-sm btn-info">Login Here</button>
+            </form>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+</div>
+{% endblock%}
