--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -7,7 +7,7 @@
         <div class="col-md-6">
             <form action="" method="post" novalidate>
                 {% csrf_token %}
-                <!-- {{ form|crispy }} --> 
+                {{ form|crispy }} 
                 <button class="btn btn-sm btn-info">Login Here</button>
             </form>
         </div>
