--- a/watch/templates/watch/posts_form.html
+++ b/watch/templates/watch/posts_form.html
@@ -1,6 +1,6 @@
-<h1 class="text-center" > Create New Post</h1>
+<!-- <h1 class="text-center" > Create New Post</h1>
 <form action="{% url 'new' %}" method="POST" enctype="multipart/form-data" style="margin-left: 150px;">
 {% csrf_token %}
 {{ form.as_p}}
 <input type="submit" value="Post" class="btn btn-secondary">
-</form>
+</form> -->
