--- a/watch/templates/watch/posts_list.html
+++ b/watch/templates/watch/posts_list.html
@@ -1,2 +1,8 @@
-<!--  . 
- -->
+<div class="container">
+    <h1>posts</h1>
+    <a class="btn btn-dark btn-lg mt-4 " href="{% url 'new' %}">Add Post</a>
+    {% for image in object_list %}
+    <img src="{{image.image.url}}" class="card-img-top" height="250px" alt="Fissure in Sandstone"/>
+    <h1>{{posts.title}}</h1>
+    {% endfor %}
+</div>
