--- a/watch/templates/navbar.html
+++ b/watch/templates/navbar.html
@@ -1,6 +1,6 @@
 <header class="main-header fixed-top">
     <a href="{% url 'homepage' %}" class="brand-logo">
-        <h2 class="page-title" title="HomePage">NeighbourHood</h2>
+        <h2 class="page-title" title="HomePage">TheHood</h2>
     </a>
     <nav class="main-nav">
         <ul>
