display users posts

--- a/watch/templates/navbar.html
+++ b/watch/templates/navbar.html
@@ -1,4 +1,4 @@
-<header class="main-header fixed-top">
+<header class="main-header">
     <a href="{% url 'homepage' %}" class="brand-logo">
         <h2 class="page-title" title="HomePage">TheHood</h2>
     </a>
