--- a/watch/static/css/styles.css
+++ b/watch/static/css/styles.css
@@ -1,3 +1,17 @@
+/* Homepage styling */
+.post-card{
+  padding: 0.5em;
+  margin: 0.5em;
+  border: none;
+}
+.card-img-top{
+  height: 50%;
+}
+.post-display{
+  max-height: 40rem;
+  overflow-y: scroll;
+}
+
 /* Navbar styling */
 .main-nav ul{
     display: flex;
