--- a/watch/templates/watch/index.html
+++ b/watch/templates/watch/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="homepage">
+<div class="homepage m-4">
     <div class="row">
         <div class="col-md-3">
-            <ul>
+            <br>
+            <h3 class="p-2 font-weight-bold">Amenities</h3>
+            <ul class="">
                 <li class="nav-items"><a href="">Police Station</a></li>
                 <li class="nav-items"><a href="">Hair & Grooming</a></li>
                 <li class="nav-items"><a href="">Hospitals</a></li>
@@ -12,18 +14,22 @@
                 <li class="nav-items"><a href="">Food Joints</a></li>
             </ul>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 post-display">
             <div class="d-flex justify-content-center">
-                {% for post in posts %}
-                <div class="card post-card" style="width: 18rem;">
-                    <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{post.title}}</h5>
-                        <p class="card-text">{{post.description}}</p>
-                        <p class="card-text">Post by: {{post.profile.name}}</p>
+                <div class="row">
+                    {% for post in posts %}
+                    <div class="col-md-4">
+                        <div class="card post-card" style="width: 18rem;">
+                            <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">{{post.title}}</h5>
+                                <p class="card-text">{{post.description}}</p>
+                                <p class="card-text">Post by: {{post.profile.name}}</p>
+                            </div>
+                        </div>
                     </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
             </div>
         </div>
     </div>
