Add routes to navbar

--- a/watch/templates/navbar.html
+++ b/watch/templates/navbar.html
@@ -8,6 +8,18 @@
                 {% load static %}
                 <img src="" title="HomePage" alt="" srcset="">
             </a></li>
+            <li class="nav-items"><a href="{% url 'post-create' %}" >
+                {% load static %}
+                <img src="{% static 'css/assets/add-svgrepo-com.svg' %}" title="Create Post">
+            </a></li>
+            <li class="nav-items"><a href="" >
+                {% load static %}
+                <img src="{% static 'css/assets/user-profile-svgrepo-com.svg' %}" title="Profile">
+            </a></li>
+            <li class="nav-items"><a href="" >
+                {% load static %}
+                <img src="{% static 'css/assets/logout-svgrepo-com.svg' %}" title="Logout">
+            </a></li>
         </ul>
     </nav>
 </header>
