--- a/watch/templates/watch/post_create.html
+++ b/watch/templates/watch/post_create.html
@@ -7,7 +7,9 @@
         <h2 class="instagram-title text-center">Create Post</h2>
         <form enctype="multipart/form-data" class="" method="POST">
             {% csrf_token %}
-            <p>{{post_create_form|crispy}}</p>            
+            <p>{{post_create_form.title|as_crispy_field}}</p>
+            <p>{{post_create_form.description|as_crispy_field}}</p>
+            <p>{{post_create_form.image|as_crispy_field}}</p>         
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Upload</button>
             </div>
