--- a/watch/templates/amenities/fastfood.html
+++ b/watch/templates/amenities/fastfood.html
@@ -4,7 +4,7 @@
 <div class="amenity-display m-4">
     <div class="d-flex justify-content-center">
         <div class="row">
-            {% for police in police_station %}
+            {% for police in fastfood %}
             <div class="col-md-6">
                 <div class="card" style="width:30rem; height:12rem;">
                     <div class="row">
