--- a/watch/templates/amenities/hospital.html
+++ b/watch/templates/amenities/hospital.html
@@ -4,13 +4,13 @@
 <div class="amenity-display m-4">
     <div class="d-flex justify-content-center">
         <div class="row">
-            {% for police in police_station %}
+            {% for business in hospital %}
             <div class="col-md-6">
                 <div class="card" style="width:30rem; height:12rem;">
                     <div class="row">
                         <div class="col-md-5">
-                            {% if police.bsn_image %}
-                            <img class="card-img-top" src="{{police.bsn_image.url}}" alt="Card image cap">
+                            {% if business.bsn_image %}
+                            <img class="card-img-top" src="{{business.bsn_image.url}}" alt="Card image cap">
                             {% else %}
                             {% load static %}
                             <img class="card-img-top" src="{% static 'css/assets/business-svgrepo-com.svg' %}"
@@ -19,9 +19,9 @@
                         </div>
                         <div class="col-md-7">
                             <div class="card-body">
-                                <h5 class="card-title">{{police.bsn_name}}</h5>
-                                <p class="card-text">{{police.bsn_email}}</p>
-                                <p class="card-text">{{police.phone}}</p>
+                                <h5 class="card-title">{{business.bsn_name}}</h5>
+                                <p class="card-text">{{business.bsn_email}}</p>
+                                <p class="card-text">{{business.phone}}</p>
                             </div>
                         </div>
                     </div>
