--- a/watch/templates/watch/index.html
+++ b/watch/templates/watch/index.html
@@ -19,8 +19,8 @@
                 <div class="row">
                     {% for post in posts %}
                     <div class="col-md-4">
-                        <div class="card post-card" style="width: 18rem;">
-                            <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap">
+                        <div class="card post-card" style="width:20rem;">
+                            <img class="card-img-top post-card-img" src="{{post.image.url}}" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">{{post.title}}</h5>
                                 <p class="card-text">{{post.description}}</p>
