--- a/watch/static/css/styles.css
+++ b/watch/static/css/styles.css
@@ -85,3 +85,56 @@
       border-radius:2%;
       background-color:#FAF9F6;
   }
+
+  /* Accounts pages - login and signin */
+.accounts-page{
+  margin-top: 6vh;
+}
+.ig-image-accounts{
+  display: block;
+  margin-left: auto;
+}
+.account-nav{
+  margin-top: 2vh;
+  padding: 2vw;
+}
+.separator::before,.separator::after {
+  display: inline-block;
+  content: "";
+  width: 4rem;
+  margin:-0.5rem 1rem;
+  transform: translateY(-1rem);
+  opacity: 0.5;
+}
+.accounts-submit{
+  margin: 1rem;
+  padding: .5rem;
+  font-weight: bold;
+}
+
+  /* Login-page */
+  .password-reset-pages{
+      width: 70%;
+      padding: 2vw;
+      top: 20%;
+      position: relative;
+  }
+  .login-section{
+
+      width: 50%;
+      margin-top: 2vh;
+  }
+  .login-form{
+      width: 90%;
+      margin: 2vh auto;
+  }
+  .accounts-username, .accounts-password, .accounts-email{
+      background: transparent;
+      border: 0 solid;
+      border-radius: 1%;
+      display: block;
+      margin: 1rem;
+      padding: .5rem;
+      transition: 250ms ease-in;
+      width: calc(100% - 3rem);
+  }
