--- a/watch/templates/navbar.html
+++ b/watch/templates/navbar.html
@@ -4,22 +4,25 @@
     </a>
     <nav class="main-nav">
         <ul>
-            <li class="nav-items"><a href="{% url 'homepage' %}" title="HomePage" >
-                {% load static %}
-                <img src="" title="HomePage" alt="" srcset="">
-            </a></li>
+            {% if user.is_authenticated %}
             <li class="nav-items"><a href="{% url 'post-create' %}" >
                 {% load static %}
                 <img src="{% static 'css/assets/add-svgrepo-com.svg' %}" title="Create Post">
             </a></li>
-            <li class="nav-items"><a href="" >
+            <li class="nav-items"><a href="{% url 'user_profile' user.id %}" >
                 {% load static %}
-                <img src="{% static 'css/assets/user-profile-svgrepo-com.svg' %}" title="Profile">
+                <img src="{% static 'css/assets/user-profile-svgrepo-com.svg' %}" title="{{request.user}}">
             </a></li>
             <li class="nav-items"><a href="{% url 'logout' %}" >
                 {% load static %}
                 <img src="{% static 'css/assets/logout-svgrepo-com.svg' %}" title="Logout">
             </a></li>
+            {% else %}
+            <li class="nav-items"><a href="{% url 'login' %}" title="Login" >
+                {% load static %}
+                <img src="{% static 'css/assets/login-svgrepo-com.svg' %}" title="Login" alt="" srcset="">
+            </a></li>
+            {% endif %}
         </ul>
     </nav>
 </header>
