add business to the app

--- a/watch/templates/profile.html
+++ b/watch/templates/profile.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-md-3">
             <a href="{% url 'profile_update' user_profile.user.username %}">Update Profile</a>
-            <a href="{% url 'profile_update' user_profile.user.username %}">New Business</a>
+            <a href="{% url 'bus-create' %}">New Business</a>
         </div>
     </div>
     <hr>
