--- a/watch/templates/amenities/police.html
+++ b/watch/templates/amenities/police.html
@@ -5,8 +5,9 @@
     <div class="d-flex justify-content-center">
         <div class="row">
             {% for police in police_station %}
+            {% if police.neig_id == police.profile.neighborhood %}
             <div class="col-md-6">
-                <div class="card" style="width:30rem; height:12rem;">
+                <div class="card m-1" style="width:30rem; height:12rem;">
                     <div class="row">
                         <div class="col-md-5">
                             {% if police.bsn_image %}
@@ -27,6 +28,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
