--- a/watch/templates/watch/index.html
+++ b/watch/templates/watch/index.html
@@ -18,6 +18,7 @@
             <div class="d-flex justify-content-center">
                 <div class="row">
                     {% for post in posts %}
+                    {% if post.neighborhood == post.profile.neighborhood %}
                     <div class="col-md-4">
                         <div class="card post-card" style="width:20rem;">
                             <img class="card-img-top post-card-img" src="{{post.image.url}}" alt="Card image cap">
@@ -28,6 +29,7 @@
                             </div>
                         </div>
                     </div>
+                    {% endif %}
                     {% endfor %}
                 </div>
             </div>
