--- a/watch/static/css/styles.css
+++ b/watch/static/css/styles.css
@@ -26,6 +26,7 @@ a:hover{
   font-family: 'Sacramento', cursive;
   font-weight: bolder;
   letter-spacing: 3px;
+  text-decoration: underline;
 }
 
 h1,h2,h3,h4,h5,h6{
