--- a/watch/templates/accounts/login.html
+++ b/watch/templates/accounts/login.html
@@ -9,9 +9,9 @@
                     <p class="font-type-bold float-left">Sign in to continue</p>
                 </div>
                 <div class="col-md-6">
-                    <h6 class="text-center">
+                    <p class="text-center">
                         Don't have an account? <a href="{% url 'signup' %}">Sign Up</a>
-                    </h6>
+                    </p>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
         </form>
         <div class="password-admin">
 
-            <h6 class="text-center"><a href="{% url 'reset_password' %}" class="font-weight-normal">Forgot password?</a></h6>
+            <p class="text-center"><a href="{% url 'reset_password' %}" class="font-weight-normal">Forgot password?</a></p>
             <br>
         </div>
     </div>
