--- a/watch/templates/accounts/signup.html
+++ b/watch/templates/accounts/signup.html
@@ -10,9 +10,9 @@
                     <h3 class="font-type-bold">Register</h3>
                 </div>
                 <div class="col-md-6">
-                    <h6 class="">
+                    <p class="">
                         Are you a member? <a href="{% url 'login' %}">Login Now</a>
-                    </h6>
+                    </p>
                 </div>
             </div>
         </div>
