--- a/watch/templates/amenities/fastfood.html
+++ b/watch/templates/amenities/fastfood.html
@@ -5,6 +5,7 @@
     <div class="d-flex justify-content-center">
         <div class="row">
             {% for business in fastfood %}
+            {% if business.neig_id == business.profile.neighborhood %}
             <div class="col-md-6">
                 <div class="card" style="width:30rem; height:12rem;">
                     <div class="row">
@@ -27,6 +28,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
