--- a/watch/templates/accounts/signup.html
+++ b/watch/templates/accounts/signup.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-        <div class=text-center>
+        <div class="text-center">
             <form class="login-form" method="POST" action="">
                 {% csrf_token %}
                 {{form|crispy}}
