--- a/watch/templates/profile.html
+++ b/watch/templates/profile.html
@@ -19,10 +19,10 @@
     <div class="container" style="margin-left: 20px;">
      
       <h1>{{ profile.name}}</h1>
-      <h2 >@{{ profile.user}}</h2>
+      <h2 >@{{user.username}}</h2>
       <p >Bio:{{ profile.bio }} </p>
       {% if user.is_authenticated and user == profile.user %}
-      <a  class="btn btn-success" href="{% url 'editprofile' %}">Edit Profile</a>
+      <a  class="btn btn-success" href="">Edit Profile</a>
       {% endif %}
      
       
