--- a/watch/templates/profile.html
+++ b/watch/templates/profile.html
@@ -22,7 +22,7 @@
       <h2 >@{{user.username}}</h2>
       <p >Bio:{{ profile.bio }} </p>
       {% if user.is_authenticated and user == profile.user %}
-      <a  class="btn btn-success" href="">Edit Profile</a>
+      <a  class="btn btn-success" href="{% url 'editprofile' %}">Edit Profile</a>
       {% endif %}
      
       
