--- a/watch/templates/profile.html
+++ b/watch/templates/profile.html
@@ -28,6 +28,24 @@
       
     
     </div>
+    <section>
+        <div class="container" style="margin-top: 20px;">
+            <div class="card-deck">
+              {% for post in posts %}
+                <div class="card">
+                  <img class="card-img-top" src="{{ post.image.url }}"  alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ post.title }}</h5>
+                    <p class="card-text">{{ post.description }}</p>
+                    
+                </div>
+
+              {% endfor %}
+                
+              </div>
+        </div>
+        
+    </section>
 
     
 </div>
