--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -7,7 +7,8 @@
             
             <h5 class="card-title">{{homes.name}}</h5>
             <p>{{homes.description}}</p>
-            <a href="{% url 'new-post'  %}" class="btn btn-primary">Create post</a>
+            <a href="{% url 'new-post'%}" class="btn btn-primary">Create post</a>
+            <a href="{% url 'new-business'%}" class="btn btn-primary">Create business</a>
             
         </div>
     </div>
