--- a/watch/templates/base.html
+++ b/watch/templates/base.html
@@ -14,6 +14,7 @@
     {% bootstrap_css %}
    
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        {% load static %}
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
     {% endblock %}
