--- a/watch/templates/profile.html
+++ b/watch/templates/profile.html
@@ -1,24 +1,34 @@
-% extends 'base.html' %}
-{% load crispy_forms_tags %}
-{% block content %}
+{%extends 'base.html'%}
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-4">
-            <div class="media">
-                <img class="img-thumbnail" src=" {{current_user.profile.profile_photo.url}} " alt="profile photo">
-                <div class="media-body">
-                    <h3>Username: {{user.username}} </h3>
-                    <p>Email: {{user.email}} </p>
-                    <p>Bio
- <p>Bio: {{user.profile.bio}} </p>
-                </div>
-                <!-- <a href="{% url 'profile' %} " class="btn btn-outline-info">Edit Profile</a> -->
-            </div>
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Profile Information</legend>
-                    {{ user_form|crispy }}
-                    {{ profile_form|crispy }}
-      
+
+{% block content %}
+{{block.super}}
+
+<div class="container">   
+   
+    <div class="media-left">
+        <figure class="image is-128x128">
+            <img class="is-rounded" src="{% if profile.profile_photo %}{{ profile.profile_photo.url }}{% else%} https://bulma.io/images/placeholders/128x128.png {% endif %}"style="border-radius: 50%; width:128px; height: 128px;float:left;" >
+        </figure>
+    </div>
+    <div>
+        <div>
+          
+        </div>
+    </div>
+    <div class="container" style="margin-left: 20px;">
+     
+      <h1>{{ user.name}}</h1>
+      <h2 >@{{user.username}}</h2>
+      <p >Bio:{{ user.bio }} </p>      
+      <a  class="btn btn-success" href="{% url 'editprofile' %}">Edit Profile</a>   
+     
+    
+    
+    </div>
+    
+
+    
+</div>
+   
+{% endblock %}
