--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -7,8 +7,8 @@
             
             <h5 class="card-title">{{homes.name}}</h5>
             <p>{{homes.description}}</p>
-            <a href="{% url 'new-post'%}" class="btn btn-primary">Create post</a>
-            <a href="{% url 'new-business'%}" class="btn btn-primary">Create business</a>
+            <a href="{% url 'new-post'%}" class="btn btn-info">Create post</a>
+            <a href="{% url 'new-business'%}" class="btn btn-info" style="margin-left: 800px;">Create business</a>
             
         </div>
     </div>
@@ -47,7 +47,7 @@
 </div>
 <div class="container">
     <div class="row">
-    <p>Police congtact:{{homes.police}}</p> 
+    <p>Police contact:{{homes.police}}</p> 
     <p>Health contact:{{homes.health}}</p>  
     </div>
 </div>
