--- a/watch/templates/welcome.html
+++ b/watch/templates/welcome.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+
 <style>
     .gradient-custom {
       /* fallback for old browsers */
@@ -34,3 +37,5 @@
     </div>
   </div>
   <!-- Background image -->
+
+{% endblock %}
