--- a/watch/templates/welcome.html
+++ b/watch/templates/welcome.html
@@ -26,7 +26,7 @@
   <div
     class="bg-image"
     style="
-      background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/011.webp');
+      background-image: url('https://images.pexels.com/photos/280221/pexels-photo-280221.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
       height: 100vh;
     "
   >
