--- a/watch/templates/index.html
+++ b/watch/templates/index.html
@@ -10,8 +10,8 @@
                 <img class="card-img-top" src="{{home.image.url}}" alt="Card image cap" height="180px">
                 <div class="card-body">
                     <h5 class="card-title">{{home.name}}</h5>
-                    <a href="{% url 'singlehood' home.id %}" class="btn btn-info">View a hood</a>
-                    <a href="#" class="btn btn-info">Join a hood</a>
+                    <a href="{% url 'singlehood' home.id %}" class="btn btn-info">Join a hood</a>
+                    
                 </div>
             </div>
             {% endfor%}
