--- a/watch/templates/navbar.html
+++ b/watch/templates/navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand text-white" href="{%url 'home'%}">Neighbourhood</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,30 +7,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{%url 'home'%}" >Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-white" href="{%url 'home'%}" >Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a href="{% url 'profile' request.user %}" class="navbar-item">             
-            Profile - <strong>{{ request.user }}</strong>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
+        
+        
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-success my-2 my-sm-0 text-white" type="submit">Search</button>
       </form>
+      
+      <div class="ml-auto">
+        <a href="{% url 'profile' request.user %}" class="btn btn-lg btn-light mt-4 mr-4 " >Profile -<strong>{{ request.user }}</strong></a> 
+      {% if user.is_authenticated %}
+        <a href="/logout/"class="btn btn-light btn-lg mt-4  ">LOGOUT</a>
+        {% else %}
+        <button class="btn btn-light btn-lg mt-4 ">
+         <a href="/login/" class="text-dark ">LOGIN</a>/
+          <a href="register" class="text-dark ">SIGNUP</a></button>
+          {% endif %}
+      </div>
     </div>
   </nav>
