--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -8,6 +8,7 @@
             <h5 class="card-title">{{homes.name}}</h5>
             <p>{{homes.description}}</p>
             <a href="{% url 'new-post'%}" class="btn btn-info">Create post</a>
+            <a href="{% url 'home'%}" class="btn btn-info">Change a hood</a>
             <a href="{% url 'new-business'%}" class="btn btn-info" style="margin-left: 800px;">Create business</a>
             
         </div>
