--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<style>
+    .vl {
+      border-left: 6px solid black;
+      height: 500px;
+    }
+    </style>
 <div class="container">
     <div class="row">
         <div class="col">
@@ -28,7 +33,7 @@
             </div>
             {% endfor%}
         </div>
-        
+        <div class="vl"></div>        
         <div class="col-md-3 section-a" style=" margin-top: 20px; display: flex;">
             
             {% for business in businesses %}
