--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -2,10 +2,10 @@
 {% block content %}
 <style>
     .vl {
-      border-left: 6px solid black;
+      border-left: 1px solid black;
       height: 500px;
     }
-    </style>
+</style>
 <div class="container">
     <div class="row">
         <div class="col">
@@ -33,8 +33,8 @@
             </div>
             {% endfor%}
         </div>
-        <div class="vl"></div>        
-        <div class="col-md-3 section-a" style=" margin-top: 20px; display: flex;">
+             
+        <div class="col-md-3 vl" style=" margin-top: 20px; ">
             
             {% for business in businesses %}
             <div class="card" style="width: 18rem;height: 200px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
@@ -48,15 +48,19 @@
                 </div>
             </div>
             {% endfor%}
+            <div class="card mt-4" style="width: 18rem;height: 150px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
+                
+                <div class="card-body">
+                    <h6 class="card-title">Emergency contacts</h6>
+                    <p>Police contact:{{homes.police}}</p> 
+                    <p>Health contact:{{homes.health}}</p>   
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
-<div class="container">
-    <div class="row">
-    <p>Police contact:{{homes.police}}</p> 
-    <p>Health contact:{{homes.health}}</p>  
-    </div>
-</div>
+
 
 
 {% endblock %}
