--- a/watch/templates/business.html
+++ b/watch/templates/business.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<div class="container_fluid">
+<div class="container">
     <div class="row">
         <div class="col">
             {% for business in businesses %}
