--- a/watch/templates/profile.html
+++ b/watch/templates/profile.html
@@ -21,7 +21,7 @@
       <h1>{{ user.name}}</h1>
       <h2 >@{{user.username}}</h2>
       <p >Bio:{{ user.bio }} </p>      
-      <a  class="btn btn-success" href="{% url 'editprofile' %}">Edit Profile</a>   
+      <a  class="btn btn-info" href="{% url 'editprofile' %}">Edit Profile</a>   
      
     
     
