--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -6,12 +6,12 @@
       height: 500px;
     }
 </style>
-<div class="container">
+<div class="container mt-4" >
     <div class="row">
         <div class="col">
             
-            <h5 class="card-title">{{homes.name}}</h5>
-            <p>{{homes.description}}</p>
+            <h5 class="card-title"><strong>Your Hood:</strong>{{homes.name}}</h5>
+            <p><strong>About:</strong>{{homes.description}}</p>
             <a href="{% url 'new-post'%}" class="btn btn-info">Create post</a>
             <a href="{% url 'home'%}" class="btn btn-info">Change a hood</a>
             <a href="{% url 'new-business'%}" class="btn btn-info" style="margin-left: 800px;">Create business</a>
