--- a/watch/templates/base.html
+++ b/watch/templates/base.html
@@ -57,7 +57,7 @@
     {% endblock %}
 
      <!-- Footer -->
-    <footer class="page-footer font-small blue pt-4mt-auto" style="margin-bottom: 0%; width: 100%; height: 50px; padding-top: 310px; "> 
+    <footer class="page-footer font-small blue pt-4mt-auto" style="margin-bottom: 0%; height: 50px; padding-top: 310px; "> 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">© 2022 Copyright:
         <a href="/"> Neighbourhood</a>
