--- a/watch/templates/edit_profile.html
+++ b/watch/templates/edit_profile.html
@@ -22,6 +22,7 @@
 </head>
 
 <body style="background-color:#f1f1f1;">
+  <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3 mt-3">
       <div class="card"  style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); background-image: linear-gradient(rgb(141, 178, 178), rgb(235, 193, 200));">
@@ -35,6 +36,7 @@
     <input type="submit" class="btn btn-info btn-lg" value="Post">
   </form>
   </div>
+</div>
 </div>
    {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
