--- a/watch/templates/index.html
+++ b/watch/templates/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 
-<div class="container_fluid">
-    <div class="row">
+<div class="container">
+    <div class="row ml-5">
         <div class="col" style=" margin-top: 20px; display: flex;">
             {% for home in homes%}
             <div class="card ml-4" style="width: 22rem;height: 280px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">
