--- a/watch/templates/single_hood.html
+++ b/watch/templates/single_hood.html
@@ -19,11 +19,11 @@
         </div>
     </div>
 </div>
-<div class="container_fluid">
-    <div class="row">
+<div class="container">
+    <div class="row ">
         <div class="col-md-8" style=" margin-top: 20px; display: flex;">
             {% for post in posts %}
-            <div class="card  ml-4" style="width: 22rem; height: 280px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);" >
+            <div class="card  ml-1" style="width: 22rem; height: 280px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);" >
                 <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap" height="180px">
                 <div class="card-body">
                     <h5 class="card-title">{{post.title}}</h5>
